# quieromudarme

./: .gitignore
api/: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  dev_entrypoint.sh  docker-compose.yaml  pyproject.toml
api/dbschema/: default.esdl
api/dbschema/fixups/: m1stbhmyk7jpfd7jfpzxm37qmpq7ngit5d362ysvb4at4njt4vq5fa-m1gyexr2lh7y75is7s33s6zufcwxrnpoiwmc2uv4udtltvmvfld4bq.edgeql
api/dbschema/migrations/: 00001-m1gyexr.edgeql  00002-m176tkh.edgeql  00003-m1gk65r.edgeql  00004-m1x4jl4.edgeql
api/deploy/: ec2_setup.sh  rebuild.sh  upload.sh  uv.toml  vps_setup.sh
api/docker/: airflow.dockerfile  chatbot.dockerfile  scheduler.dockerfile
api/qm_airflow/: Dockerfile
api/quieromudarme/: __init__.py  constants.py  errors.py  etl.py  log.py  logging.py  notifier.py  settings.py  utils.py
api/quieromudarme/chatbot/: __main__.py  base.py  bot.py  content.py  state.py
api/quieromudarme/db/: __init__.py  delete_housing_search_by_url.edgeql  get_housing_search_by_url.edgeql  get_housing_searches.edgeql  get_new_housing_watches_to_notify.edgeql  get_updated_housing_watches_to_notify.edgeql  get_users.edgeql  insert_housing_search.edgeql  update_notified_housing_watches.edgeql  upsert_housing_from_search.edgeql  upsert_user.edgeql  upsert_watches_for_search.edgeql
api/quieromudarme/etl/dags/: __init__.py  housing_searches_dag.py
api/quieromudarme/pipelines/: __init__.py
api/quieromudarme/pipelines/jobs/: __init__.py  housing_searches_job.py
api/quieromudarme/providers/: __init__.py  airbnb.py  base.py  blueground.py  common.py  meli.py  protocol.py  types.py  zonaprop.py  zonaprop_old.py
api/tests/: __init__.py  test_zonaprop.py  test_zonaprop_old.py
api/tests/data/: zonaprop_departamentos-alquiler-ciudad-de-santa-fe-sf-orden-publicado-descendente.html
