[tool.poetry]
name = "quieromudarme"
version = "0.4.0"
description = ""
authors = ["Martín Cura <code@tincho.dev>"]
readme = "README.md"
# packages = [{ include = "quieromudarme" }]

[tool.poetry.scripts]
chatbot = "quieromudarme.chatbot.bot:run"
effiver_debug = "quieromudarme.effiver:debug"
effiver = "quieromudarme.effiver:check_subscriptions_sync"
# dbcodegen = "edgedb.codegen --file=./quieromudarme/db/__init__.py"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.34.0"
cryptg = "^0.4.0"
pillow = "^10.2.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
beautifulsoup4 = "^4.12.3"
py-mini-racer = "^0.6.0"
edgedb = "^1.9.0"
tenacity = "^8.2.3"
urllib3 = "^2.2.1"
pytz = "^2024.1"
colorlog = "^4.8.0"
niquests = "^3.5.4"
fake-useragent = "^1.5.1"
# TODO: review this
# Using a custom patch that specifically allows using remote selenium webdriver without activating Grid mode
# seleniumbase = { git = "https://github.com/MartinCura/SeleniumBase.git", rev = "2b09daf" }
seleniumbase = "^4.25.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
pytest = "^8.1.1"
types-beautifulsoup4 = "^4.12.0.20240106"
watchfiles = "^0.21.0"
types-pytz = "^2024.1.0.20240203"

[tool.poetry.group.airflow]
optional = true

[tool.poetry.group.airflow.dependencies]
# TODO: use at least 2.9.0, using this commit as it has support for python 3.12
apache-airflow = { git = "https://git@github.com/apache/airflow.git", rev = "7bba05d", python = ">=3.12,<3.13" }

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
local_partial_types = true
enable_error_code = [
  'redundant-self',
  'redundant-expr',
  'truthy-bool',
  'truthy-iterable',
  'ignore-without-code',
  'unused-awaitable',
]

[[tool.mypy.overrides]]
# Packages without type definitions nor stubs, some because we're using an old version
module = [
  "telethon",
  "telethon.*",
  "py_mini_racer",
  "fake_useragent",
  "colorlog",
  "seleniumbase",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quieromudarme.db"]
disable_error_code = ["no-any-return", "no-untyped-def", "attr-defined"]

[tool.ruff]
target-version = "py311" # TODO: update to 3.12
line-length = 100

[tool.ruff.lint]
exclude = [
  "quieromudarme/db/__init__.py", # autogenerated
]
select = ["ALL"]
ignore = [
  "COM812", # ruff format fixes this
  "ISC001", # ruff format fixes this
  # "PLR2004", # some numbers are obvious in context, but can reevaluate
  "UP040",  # mypy doesn't support the `type` statement yet
  "G004",   # f-strings are so much more readable, perf diff is negligible
  "TD002",  # it's just me here for now
  "TD003",  # TODOs are mostly for smaller things than issues
  "ANN101", # deprecated by ruff
  "ANN102", # deprecated by ruff
  "RET504", # sometimes it's just nicer
  "FIX002", # temp: i want a cleaner list of problems
  # "ERA001", # temp: i want a cleaner list of problems
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "S101",    # pytest with asserts
  "SLF001",  # accessing private members in tests
  "PLR2004", # magic numbers in tests are very reasonable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
