[project]
name = "quieromudarme"
version = "0.4.1"
description = "Monitor housing posts across platforms and get alerts when prices go down."
authors = [{ name = "Martín Cura", email = "code@tincho.dev" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "telethon>=1.34.0,<2.0.0",
    "cryptg>=0.4.0,<1.0.0",
    "pillow>=10.2.0,<11.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "py-mini-racer>=0.6.0,<1.0.0",
    "edgedb>=2.0.1,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "urllib3>=2.2.1,<3.0.0",
    "pytz>=2024.1,<2025.0",
    "colorlog>=6.8.2,<7.0.0",
    "niquests>=3.5.4,<4.0.0",
    "fake-useragent>=1.5.1,<2.0.0",
    "seleniumbase>=4.25.4,<5.0.0",
]

[project.scripts]
chatbot = "quieromudarme.chatbot.bot:run"
effiver_debug = "quieromudarme.effiver:debug"
effiver = "quieromudarme.effiver:check_subscriptions_sync"

[dependency-groups]
etl = ["apache-airflow>=2.10.5,<2.11.0"]
dev = [
    "ruff>=0.9.9,<0.10.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.1.1,<9.0.0",
    "types-beautifulsoup4>=4.12.0.20240106,<5.0.0.0",
    "watchfiles>=0.21.0,<1.0.0",
    "types-pytz>=2024.1.0.20240203,<2025.0.0.0",
    "pre-commit>=4.1.0,<5.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["quieromudarme"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
local_partial_types = true
enable_error_code = [
    'redundant-self',
    'redundant-expr',
    'truthy-bool',
    'truthy-iterable',
    'ignore-without-code',
    'unused-awaitable',
]

[[tool.mypy.overrides]]
# Packages without type definitions nor stubs, some because we're using an old version
module = [
    "telethon",
    "telethon.*",
    "py_mini_racer",
    "fake_useragent",
    "colorlog",
    "seleniumbase",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["quieromudarme.db"]
disable_error_code = ["no-any-return", "no-untyped-def", "attr-defined"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
exclude = [
    # autogenerated
    "quieromudarme/db/__init__.py",
]
select = ["ALL"]
ignore = [
    "COM812", # ruff format fixes this
    "ERA001", # temp: i want a cleaner list of problems
    "FIX002", # temp: i want a cleaner list of problems
    "G004",   # f-strings are so much more readable, perf diff is negligible
    "ISC001", # ruff format fixes this
    # "PLR2004", # some numbers are obvious in context, but can reevaluate
    "RET504", # sometimes it's just nicer
    "TD002",  # it's just me here for now
    "TD003",  # TODOs are mostly for smaller things than issues
    "UP040",  # mypy doesn't support the `type` statement yet
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",    # pytest with asserts
    "SLF001",  # accessing private members in tests
    "PLR2004", # so-called magic numbers in tests are very reasonable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
